Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19436

ip2nets yaml parsing doesn't adhere to documented behavior

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      There are still a few issues with the ip2nets yaml parsing. In particular, it doesn't adhere to the documented behavior of only applying the first matching rule per network.

      The following entry is placed in the lustre.conf file on each server and client:

      options lnet 'ip2nets="tcp0(eth0) 192.168.0.[2,4]; \
      tcp0 192.168.0.*; o2ib0 132.6.[1-3].[2-8/2]"'
      Each entry in ip2nets is referred to as a 'rule'.

      The order of LNet entries is important when configuring servers. If a server node can be reached using more than one network, the first network specified in lustre.conf will be used.

      Because svr1 and svr2 match the first rule, LNet uses eth0 for tcp0 on those machines. (Although svr1 and svr2 also match the second rule, the first matching rule for a particular network is used).

      (emphasis mine)

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: