LU-19436 lnet: Correct ip2nets yaml parsing

The ip2nets parsing in handle_ip2nets_sequence() had several issues
that prevented it from adhering to documented behavior:

- Rules that didn't match local interfaces were incorrectly treated
  as errors instead of being silently skipped as documented
- Duplicate networks could be configured multiple times in a sequence
- Error messages were generic and didn't help diagnose configuration
  issues

This patch fixes the parsing logic to:
- Properly handle LUSTRE_CFG_RC_NO_MATCH as a valid state for
  ip2nets rules that don't apply to the current node
  - To accomodate this change, lustre_lnet_kfi_intf2nid() was changed
    to return RC_BAD_PARAM rather than RC_NO_MATCH on error.
- Track configured networks to prevent duplicates within sequences
- Provide specific error messages for different failure scenarios
  (interface not found, interface down, IP pattern mismatch, etc.)

The changes ensure that ip2nets behaves as documented: each node
identifies locally available networks based on IP address pattern
matching, with non-matching rules being silently ignored rather
than causing configuration failures.

Test-Parameters: trivial
Fixes: 144da866d6 ("LU-19159 lnet: Handle ip2nets in jt_import")
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: I6e1dac32423fc4f2056d30f0b10fa2dd847cd490
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61591
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: James Simmons <jsimmons@infradead.org>